--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,15 @@
 [server]
 host=127.0.0.1
 port=8000
+log_level=info
+
+[websocket]
+path=/ws
+
+
+[logging]
+filename=logname.log
+filemode=a
+format=%(asctime)s,%(msecs)03d %(name)s %(levelname)s %(message)s
+datefmt=%Y-%m-%d %H:%M:%S
+level=DEBUG
