Added back_end client

--- a/config.ini
+++ b/config.ini
@@ -12,4 +12,4 @@ filename=logname.log
 filemode=a
 format=%(asctime)s,%(msecs)03d %(name)s %(levelname)s %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
-level=DEBUG
+level=INFO
